--- a/Django/django_prac1/templates/pybo/question_list.html
+++ b/Django/django_prac1/templates/pybo/question_list.html
@@ -1,4 +1,4 @@
-{% {% extends "base.html" %}%}
+{% extends "base.html" %}
 {% block content %}
 <div class="container my-3">
     <table class="table">
@@ -27,5 +27,6 @@
         {% endif %}
         </tbody>
     </table>
+    <a href="{% url 'pybo:question_create' %}" class="btn btn-primary">질문 등록하기</a>
 </div>
 {% endblock %}
