--- a/Django/django_prac1/templates/pybo/question_list.html
+++ b/Django/django_prac1/templates/pybo/question_list.html
@@ -20,10 +20,13 @@
             </td>
             <td>
                 <a href="{% url 'pybo:detail' question.id %}">{{ question.subject }}</a>
+                {% if question.answer_set.count > 0 %}
+                <span class="text-danger snall mx-2">{{ question.answer_set.count }}</span> 
+                {% endif %}
             </td>
             <td>{{ question.create_date }}</td>
         </tr>
-
+        </tr>
         {% endfor %}
         {% else %}
         <tr>
